--- a/string_list_sets.ipynb
+++ b/string_list_sets.ipynb
@@ -354,8 +354,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0dadca9e-8a84-40d9-a5da-ec5d8c67bbdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "a.append(4)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "367e79a5-2927-40f5-8012-4652f26ae1f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "li = [1, 2, 3]\n",
+    "li.append(4)\n",
+    "print(li)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c69f35a3-e22b-4dfb-bbfd-5eaf88f246dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 1, 1, 1,4,5,5,5,5,5,5,5,5,3, 4, 3, 3, 5]\n",
+    "\n",
+    "res = list(set(a))\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed59fc1f-2747-479a-a6d8-a1696e875c4c",
    "metadata": {},
    "outputs": [],
    "source": []
